--- a/src/app/features/checkout/checkout.component.html
+++ b/src/app/features/checkout/checkout.component.html
@@ -103,7 +103,7 @@
       <div class="flex justify-between text-lg text-gray-700 mb-4">
         <p class="flex items-center gap-2">
           <i class="fa-solid fa-box"></i>
-          {{ Cart.products?.length || 0 }} Items
+          {{ Cart.products.length || 0 }} Items
         </p>
         <p class="font-semibold flex items-center gap-2">
           <i class="fa-solid fa-tag text-[var(--main-color)]"></i>
